--- a/OEBPS/Text/c043.xhtml
+++ b/OEBPS/Text/c043.xhtml
@@ -19,13 +19,13 @@
     <p>但是从一部分开始就有“奇迹塔！”这样的兴奋的声音很在意。</p>
     <p>莫尼卡的同类吗？</p>
     <p>同时，吉克林德的原形判明的同时学园的警备被强化，经常士兵在学园内巡回。</p>
-    <p>当然，他们都是伯恩哈德令人叹为观止的士兵。</p>
-    <p>梅赛德认为应该保护城堡里的吉克林德，而不是还有内部人员和刺客不知道什么时候的学校，但伯恩哈德回答说：..</p>
+    <p>当然，他们都是伯恩哈特令人叹为观止的士兵。</p>
+    <p>梅赛德认为应该保护城堡里的吉克林德，而不是还有内部人员和刺客不知道什么时候的学校，但伯恩哈特回答说：..</p>
     <p>“城堡里还夹杂着跟着伊萨克喝着甜头的卡斯们。其他国家的人也有几个吧。</p>
     <p>在全部洗掉、肃清之前放置公主反而很危险。还是学园比较好吧</p>
     <p>概括地说，是想吹起肃清的暴风雨扫除碍事的贵族，自己掌握现在以上的权力之前将碍事的公主暂时隔离在学园。</p>
     <p>这家伙是在努力保护一个人吗？</p>
-    <p>当指出这一点时，伯恩哈德满意地笑了。</p>
+    <p>当指出这一点时，伯恩哈特满意地笑了。</p>
     <p>不行，这个外道……我得赶紧做点什么……</p>
     <p>季节更替，夏天来了。</p>
     <p>或许是因为剑的风波，这几天其他学生都在卖护身符，这很烦人。</p>
