--- a/OEBPS/Text/c134.xhtml
+++ b/OEBPS/Text/c134.xhtml
@@ -11,123 +11,134 @@
 </head>
 
 <body>
-    <h1>134　歪んだ解決法</h1>
-    <p>　人は現実を知り、才能を知り、挫折を知り。そして夢を追わなくなって目的のない物語が出来上がる。</p>
-    <p>　メルセデスの前世だった誰かは、自分のせいで誰かがそうなる事を恐れた。</p>
-    <p>　自分が全力で何かに挑む事で他の誰かが挫折し、目的のない物語の主人公となってしまう。</p>
-    <p>　そうして挑戦を止め、自らが目的のない物語の主人公になり果てて死んだ。</p>
-    <p>　その残滓をメルセデスもまた、引きずっていた。</p>
-    <p>　だから病的に他人を信じず、仲間を作らなかった。</p>
-    <p>　誰かの夢を踏みにじってまで前に突き進む強さが無かったのだろう。</p>
-    <p>　踏みにじったものを無駄にしないという気概が無かったのだろう。</p>
-    <p>　だから冷めているような態度を取り、熱を封じ込め、何にも挑まなかった。</p>
-    <p>　結局の所、メルセデスは中途半端だったのだ。</p>
-    <p>　他人などどうでもいいという態度を取り、学園の狩猟祭の時は派閥競争を下らないと纏めて踏み潰し、前に進み続けると決めていたくせに……変な所で、他者の事を気にしていた。</p>
-    <p>　世の中の『普通』に何とか自分を合わせようとして、情があるフリをしたりもした。</p>
-    <p>　何かが欠けている自分にコンプレックスを抱き、満たされている他人の真似をした。</p>
-    <p>　だが元々ズレているメルセデスがいくら他人の模倣をしても、心は満たされない。欠けたままだ。</p>
-    <p>　そう、本当に欠けていたのは――メルセデス自身の心。</p>
-    <p>　他者への情愛がなかったのも当然だろう。</p>
-    <p>　自分自身すら受け入れぬ者が、他人を受け入れる余裕などあるものか。</p>
-    <p>　前世の誰かは、その事に気付く事なく分岐点で選択を誤り、生涯を欠けた月のまま終わらせた。</p>
-    <p>　笑って死ぬことなく、悔いながら死んだ。</p>
+    <h1>134. 歪曲的解决方法</h1>
+    <p>人知道现实，知道才能，知道挫折。然后不再追逐梦想，没有目的的故事就完成了。</p>
+    <p>梅赛德斯前世的某人，因为自己的原因害怕有人会变成那样。</p>
+    <p>由于自己全力挑战什么的事其他的谁受挫，成为了没有目的的故事的主人公。</p>
+    <p>于是停止了挑战，自己成为了没有目的的故事的主人公而死去。</p>
+    <p>梅赛德斯也拖着那个残渣。</p>
+    <p>所以病态地不相信别人，不结交伙伴。</p>
+    <p>没有践踏谁的梦想前进的强度吧。</p>
+    <p>没有不浪费践踏的东西的气概吧。</p>
+    <p>所以采取冷淡的态度，封锁热情，什么也没有挑战。</p>
+    <p>结果，梅赛德斯半途而废。</p>
+    <p>抱着别人什么的都无所谓的态度，在学园的狩猎祭的时候，如果不降低派系竞争的话就把它踩扁，明明决定继续往前走……在奇怪的地方，在意着别人的事情。</p>
+    <p>为了让自己与世界上的“普通”相契合，还假装有情。</p>
+    <p>对缺少什么的自己产生了自卑感，模仿了被满足的别人。</p>
+    <p>但是，原本就有偏差的梅赛德斯无论怎么模仿别人，内心都无法满足。一直残缺着。</p>
+    <p>没错，真正欠缺的是——梅赛德斯自己的心。</p>
+    <p>没有对他人的情爱也是理所当然的吧。</p>
+    <p>连自己都不接受的人，有接受别人的余地吗。</p>
+    <p>前世的某个人，没有注意到这件事，在分歧点上选择错误，一生就像欠缺的月亮一样结束了。</p>
+    <p>笑着没有死，后悔地死了。</p>
     <p></p>
-    <p>　そして、ここがメルセデスにとっての分岐点だ。</p>
-    <p>　メルセデスの行動一つで、今後の世界の未来そのものが変わる。</p>
-    <p>　ダンジョンを複数持つというのは、そういう事だ。一人の意思で世界の行く末を決定出来るほどの力を手にしてしまっている。</p>
-    <p>　父と協力して他の三種族を滅ぼして吸血鬼の帝国を築き上げるか。</p>
-    <p>　それとも父に反逆し、別の道を歩むか。</p>
+    <p>而且，这里是梅赛德斯的分岔点。</p>
+    <p>梅赛德斯的行动一个，今后世界的未来本身就会改变。</p>
+    <p>拥有多个迷宫就是这么回事。我得到了能根据一个人的意思决定世界前途的力量。</p>
+    <p>和父亲合作消灭其他三个种族，建立吸血鬼帝国吗。</p>
+    <p>还是反叛父亲，走另一条路。</p>
     <p></p>
     <p>“<span class="character">…………</span>”</p>
     <p></p>
-    <p>　メルセデスは腕を組み、自分が取るべき道を考える。</p>
-    <p>　まず、父を止める理由は……実の所、あんまりない。</p>
-    <p>　フォーゲラの今回の行動はあまりに迂闊で間抜けすぎて引っかかりを覚えるが、それでも向こうがちょっかいをかけてきたのは確かだ。</p>
-    <p>　それに今まで均衡を保っていたのは所詮、互いに手出しが出来なかったというだけで決して仲良く手を取り合っていたわけではない。</p>
-    <p>　直接の激突がなかっただけで、この世界は常に戦争状態にあったのだ。</p>
-    <p>　例えば、今回のケースとは逆に他の種族がダンジョンを他の種族よりも多く持ち、攻め込めるだけの戦力を得たならば、吸血鬼は滅ぼされる側になるだろう。</p>
-    <p>　そして今後、そうならないという保証はない。何せまだ、攻略されていないダンジョンはいくつもあるはずなのだ。</p>
-    <p>　そして、困った事にあんな父でも一応、今は味方勢力だ。</p>
-    <p>　ジークリンデが未熟でトップとして機能していないので、何ならベルンハルトこそが吸血鬼側のトップである。彼を倒して困るのは他でもない吸血鬼側だ。</p>
-    <p>　ならばここは父と手を組み、ひとまず共通の敵であるエルフェ、フォーゲラ、シメーレを叩いてしまうのは選択肢として有りだろう。</p>
-    <p>　滅ぼすのは流石に過激すぎるが、ダンジョンを取り上げて吸血鬼の支配下に置いてしまえば少なくとも、吸血鬼が他の種族に攻め滅ぼされる事を危惧しなくてよくなる。</p>
-    <p>　だが問題はその後……吸血鬼一強状態になった時、父が保有するダンジョンの数が増えて、メルセデスでは太刀打ち出来なくなってしまう可能性がある。</p>
-    <p>　現在最低でもエルフェが二、シメーレが二、フォーゲラが一つダンジョンを保有している。</p>
-    <p>　仮にそれら全てを父が得てしまえば、合計で六……残念だが、こうなっては勝ち目は薄い。</p>
-    <p>　当然ベルンハルトは次にメルセデスのダンジョンも奪うだろう。</p>
-    <p>　妙に気に入られているので殺される事はないかもしれないが、その後に待っているのは一生首輪を付けられての飼い殺しだ。</p>
-    <p>　そんな生涯を送っては、どう考えても悔いが残る。それはメルセデスの今世の目標と反するものだ。</p>
+    <p>梅赛德斯抱着胳膊，思考自己应该采取的道路。</p>
+    <p>首先，阻止父亲的理由是……实际上，没有什么。</p>
+    <p>福格拉这次的行动太迂回，太愚蠢了，让人觉得很麻烦，但确实是对方多管闲事。</p>
+    <p>而且，至今为止保持均衡的归根结底，并不是仅仅因为彼此不能插手而友好地携手。</p>
+    <p>只是没有直接的激战，这个世界经常处于战争状态。</p>
+    <p>例如，与这次的情况相反，如果其他种族拥有比其他种族更多的迷宫，得到了可以进攻的战斗力，吸血鬼就会成为被毁灭的一方。</p>
+    <p>而且不能保证今后不会这样。不管怎么说，应该有好几个没有攻略的迷宫。</p>
+    <p>而且，令人困扰的是，即使是那样的父亲，现在也是我方势力。</p>
+    <p>吉克林德还不成熟，没有作为首位发挥作用，所以贝伦哈特才是吸血鬼方面的首位。打倒他而困扰的不是其他的吸血鬼。</p>
+    <p>那么，这里和父亲联手，先攻击共同的敌人埃尔菲、福格拉、奇美拉是一种选择吧。</p>
+    <p>虽然毁灭的话太过激了，但是如果拿起迷宫放在吸血鬼的统治下的话，至少不用担心吸血鬼会被其他种族攻击毁灭。</p>
+    <p>但是问题在那之后……吸血鬼一强状态的时候，父亲拥有的迷宫的数量增加了，梅赛德斯有可能无法与之匹敌。</p>
+    <p>现在最低也有埃尔菲二，奇美拉二，福格拉一个迷宫。</p>
+    <p>如果父亲得到了所有的东西，合计六……虽然很遗憾，但是这样的话胜算就太少了。</p>
+    <p>当然，伯恩哈特接下来也会夺走梅赛德斯的迷宫。</p>
+    <p>因为特别喜欢所以可能不会被杀，但是在那之后等着的是一生戴着项圈的饲养者。</p>
+    <p>这样的一生，无论怎么想都会留下遗憾。那与梅赛德斯今世的目标是相反的。</p>
     <p></p>
-    <p>　だからといって、父を止めても、それはいつ崩れてもおかしくない氷上の均衡を維持するだけで何の解決にもならない。</p>
-    <p>　それどころか下手にベルンハルトを倒してしまえば、国が混乱する。</p>
-    <p>　つまり、ベルンハルトに手を貸すのも、反逆するのも正解ではない。どちらも間違いだ。</p>
-    <p>　ならばもう一つ……間違いを正解に変える為に選択の幅を広げてしまうべきだろう。</p>
-    <p>　メルセデスの当面の目標はダンジョンを制覇する事。ならばエルフェもフォーゲラも、シメーレも、そして父も。どれもいずれはぶつからなければならない敵だ。</p>
-    <p>　種族を滅ぼす気はない。</p>
-    <p>　かといって現状を維持する気もない。</p>
-    <p>　滅ぼさずに、無力化する。そしてダンジョンを全て手に入れる。</p>
-    <p>　そして戦争にならないように種族間のパワーバランスも均一にする。</p>
-    <p>　その全ては……決して矛盾しない。</p>
+    <p>即便如此，即使阻止父亲，只要维持随时崩溃也不奇怪的冰上均衡，就不能解决任何问题。</p>
+    <p>不仅如此，如果不小心打倒了伯尔尼哈登，国家就会混乱。</p>
+    <p>也就是说，对伯尔恩哈特出手和叛逆都不是正确答案。两者都是错误的。</p>
+    <p>那么还有一个……为了把错误变成正确答案，应该扩大选择的范围吧。</p>
+    <p>梅赛德斯的当前目标是称霸迷宫。那么埃尔菲、福格拉、奇美拉、还有父亲。每一个都是必须战胜的敌人。</p>
+    <p>我不想消灭种族。</p>
+    <p>虽说如此，也不想维持现状。</p>
+    <p>不灭，无力化。然后得到所有的迷宫。</p>
+    <p>而且为了不发生战争，种族之间的力量平衡也变得均匀。</p>
+    <p>这一切……绝对不矛盾。</p>
     <p></p>
-    <p>“<span class="character">……何だ、思ったよりシンプルだな</span>”</p>
-    <p>“<span class="character">……メルちゃん？</span>”</p>
-    <p>“<span class="character">ハンナ、ジークリンデ、兄さん。崩れてしまった戦力バランスを元に戻す方法が一つだけある</span>”</p>
+    <p>“<span class="character">……什么啊，比想象的要简单啊</span>”</p>
+    <p>“<span class="character">……梅尔？</span>”</p>
+    <p>“<span class="character">汉娜、吉克林德、哥哥。只有一个方法能让崩溃的战斗力平衡恢复原状。</span>”</p>
     <p></p>
-    <p>　そう、シンプルだ。</p>
-    <p>　気付いてしまえば、本当に簡単な事だ。</p>
-    <p>　迷いが晴れたように顔を上げるメルセデスに、ハンナが嫌な予感がする、という顔を向けた。</p>
-    <p>　何とも残念な事に、きっとその予感は大当たりしているだろう。</p>
+    <p>是的，很简单。</p>
+    <p>如果注意到的话，真的是很简单的事情。</p>
+    <p>梅赛德斯的脸上露出了迷惑，汉娜有种不好的预感。</p>
+    <p>遗憾的是，那个预感一定大获成功吧。</p>
     <p></p>
-    <p>“変に二つだの一つだの、三つだのとダンジョンを持つからややこしいんだ。</p>
-    <p>なら、四種族全てダンジョン保有数がゼロになればいい。簡単な事だ。</p>
-    <p>いや、極論……誰もダンジョンなど持たなければいい”</p>
-    <p>“<span class="character">……うん？　ん？　あ、うん。待って、待って待って。もう次にメルちゃんが何を言うか、分かる気がする。けどそれって……ねえ、本気で？　本気でそれやる気！？</span>”</p>
+    <p>“<span class="character">奇怪的是，因为有两个一个，三个和迷宫，所以很麻烦。</span></p>
+    <p><span class="character">那么，四个种族全部拥有迷宫的数量为零就好了。很简单的事。</span></p>
+    <p><span class="character">不，极而言之……谁都没有迷宫就好了</span>”</p>
+    <p>“<span class="character">……嗯？嗯？啊，嗯。等一下，等一下。我已经知道梅尔接下来要说什么了。但是那个……喂，真的吗？你真心这么想吗！？</span>”</p>
     <p></p>
-    <p>　どうやらハンナは、メルセデスが何を考えているか察してしまったようだ。</p>
-    <p>　流石に頭の回転が速い。</p>
+    <p>看来汉娜已经察觉到梅赛德斯在想什么了。</p>
+    <p>毕竟脑子转得很快。</p>
     <p></p>
-    <p>“ああ、多分これしかない。他の種族を滅ぼしてしまえば文化は間違いなく退化する……吸血鬼は恵まれているせいで、逆に発展性がないからな。多様性が失われるのも望ましく無い。だから他の三種族は滅ぼさない。</p>
-    <p>そしてこちらに攻め込む事も出来ないようにする。今後の火種も潰す。その為の方法は一つだ”</p>
-    <p>“待って！　待って待って！　よし分かった！　私、部屋を出る！　殿下とフェリックス君も聞かないようにしよう！　それ聞いたら絶対引き返せなくなるやつだよね！　ていうかそれ言っていいの！？　最悪、私達全員メルちゃんの敵になるよ！？”
+    <p>“<span class="character">啊，大概只有这个了。如果消灭了其他种族，文化肯定会退化……因为吸血鬼很幸运，反而没有发展性。失去多样性也不理想。所以其他三个种族不会灭亡。</span></p>
+    <p><span class="character">而且也不能攻入这里。今后的火种也会崩溃。为此的方法只有一个</span>”</p>
+    <p>“<span class="character">等等！等等！等等！好的知道了！我要离开房间！殿下和费利克斯也别问了！听了之后绝对回不去的家伙吧！说起来也可以吗！？最糟糕的是，我们都会成为梅尔的敌人的！？</span>”
     </p>
-    <p>“<span class="character">何、問題はない。ジークリンデは性格上、この提案を聞けば十中八九こちらに付く。ジークリンデがこちらに付けばハンナも付く。兄さんは……こちらに付いてくれた方が好都合だが、そうでなければその時に考えよう。まあ、賭けだな</span>”</p>
-    <p>“<span class="character">待って、おかしいって！　ねえ、メルちゃんそんな無計画じゃなかったでしょ！　今までの慎重なメルちゃんはどこに行ったの！？　不確定要素だらけの賭けとかやるタイプじゃなかったじゃん！</span>”</p>
+    <p>“<span
+            class="character">没什么问题。吉克林德性格上，听了这个提案十有八九都会跟着我。吉克林德跟在这里的话，汉娜也会跟着。哥哥……跟在这里比较方便，如果不是这样的话，到时候再考虑吧。嘛，这是赌注啊。</span>”
+    </p>
+    <p>“<span class="character">等等，我说了！喂，小梅尔不是那种无计划的吧！到现在为止谨慎的小梅尔去哪里了！？不是那种满是不确定因素的赌博的类型吧！</span>”</p>
     <p></p>
-    <p>　ハンナは涙目で訴えているが、メルセデス自身もこれから言おうとしている事、やろうとしている事が今までの自分と大きく異なっている事は自覚していた。</p>
-    <p>　だが、きっとこれこそが必要な事なのだろうと思う。</p>
-    <p>　今までメルセデスはギリギリの慎重さを保っていた。</p>
-    <p>　臆病だったと言ってもいい。</p>
-    <p>　裏切られる事を恐れ、他人と違う何かになる事を恐れ、一歩をずっと踏み出せずにいた。</p>
-    <p>　だが、フェーニクスとの戦いを経て自覚してしまったのだ。</p>
-    <p>　自分が何を求めていたのか。自分がどうしようもなく歪んでいて、それはもう治せないという事を。</p>
-    <p>　ならば、この歪んでいる自分をまずは受け入れよう。今まで拒絶していた自分自身を認め、その上で自分だけの道を進もう。</p>
-    <p>　無表情を貫いていたメルセデスの口元が歪み、牙が覗く。</p>
-    <p>　その邪悪さすら感じる――初めて見るメルセデスの笑みに、ジークリンデ達が驚いたような顔をした。</p>
-    <p>　そう、これが私だ、とメルセデスは思う。</p>
-    <p>　生物を殺めても何も感じない。そんな自分を嫌悪して自分自身を恐れた。</p>
-    <p>　母や婆や、妹にすら愛情を抱けない歪な自分を嫌い、そんな自分を閉じ込めた。</p>
-    <p>　ジークリンデと彼女の母が抱き合う姿に何の感慨も湧かない自分が大嫌いで、自分を遠ざけた。</p>
-    <p>　だが、もういいだろう。</p>
-    <p>　馬鹿は死んでも治らない。ならばもう自分を認めてやってもいいだろう。</p>
-    <p>　メルセデスという欠けた月の満たされない部分はきっと、歪みに歪んでいてクレーターだらけで、みっともない形をしているのだろう。</p>
-    <p>　そんな満月を恥じて隠して、それで欠けている満たされないと嘆いていた。</p>
-    <p>　それもここまでだ……もう自分を抑えつけるのは、止めてしまおう。</p>
+    <p>汉娜用眼泪诉说着，梅赛德斯自己也意识到今后要说的事，想做的事和至今为止的自己有很大的不同。</p>
+    <p>但是，我想这一定是必要的事情吧。</p>
+    <p>到目前为止，梅赛德斯一直保持着极限的谨慎。</p>
+    <p>可以说是胆小。</p>
+    <p>害怕被背叛，害怕成为和别人不同的东西，一直没有迈出一步。</p>
+    <p>但是，经过与费尼克斯的战斗，我意识到了。</p>
+    <p>自己追求的是什么。自己无可奈何地扭曲着，已经治不好了。</p>
+    <p>那么，首先接受这个扭曲的自己吧。承认至今为止拒绝的自己，在此基础上走自己的路吧。</p>
+    <p>贯穿无表情的梅赛德斯的嘴角扭曲，牙齿窥视。</p>
+    <p>连那种邪恶都感觉到——第一次看到梅赛德斯的笑容，吉克林德他们露出了吃惊的表情。</p>
+    <p>没错，这就是我，梅赛德斯想。</p>
+    <p>杀了生物也没什么感觉。讨厌那样的自己，害怕自己。</p>
+    <p>讨厌连母亲、奶奶、妹妹都不能抱有爱情的扭曲的自己，封闭了这样的自己。</p>
+    <p>我非常讨厌吉克林德和她母亲拥抱在一起的样子没有任何感慨的自己，所以远离了自己。</p>
+    <p>但是，已经好了吧。</p>
+    <p>傻瓜死了也治不好。那样的话，已经可以承认自己了吧。</p>
+    <p>梅赛德斯这个残缺的月亮不满足的部分，一定是扭曲扭曲的，到处都是陨石坑，形状很难看吧。</p>
+    <p>他羞愧地隐藏着那样的满月，叹息着因此而欠缺的无法满足。</p>
+    <p>那也到此为止了……不要再压抑自己了。</p>
     <p></p>
-    <p>“慎重に振舞うべき時は終わったという事だ。</p>
-    <p>この先はきっと、少しくらい無謀でおかしくなければ進めない領域なんだと私は思う。</p>
-    <p>だから――私は、父が持つ物を含めた全てのダンジョンを強奪する。</p>
-    <p>エルフェも、シメーレも、フォーゲラも、そして未だ攻略されていないダンジョンも全てだ。</p>
-    <p>全てのダンジョンをこの手に収め、そしてその力でいがみ合っている四種族を統一する。</p>
-    <p>そうすれば戦争は起こらない……単純な話だろう？”</p>
-    <p>“<span class="character">た、単純って……ねえメルちゃん？　それ完全に悪者の発想だよ？　だって、それ……それ……</span>”</p>
+    <p>“<span class="character">应该慎重行动的时候已经结束了。</span></p>
+    <p><span class="character">我想今后一定是稍微鲁莽不可笑就不能前进的领域。</span></p>
+    <p><span class="character">所以——我要抢劫包括父亲拥有的东西在内的所有迷宫。</span></p>
+    <p><span class="character">埃尔菲、奇美拉、福格拉，还有还没有攻略的迷宫都是全部。</span></p>
+    <p><span class="character">把所有的迷宫都收在手中，然后统一因其力量而互相仇视的四个种族。</span></p>
+    <p><span class="character">这样的话就不会发生战争……这是单纯的故事吧？</span>”</p>
+    <p>“<span class="character">简单……喂，梅尔？这完全是坏人的想法吗？因为，那个……那个……</span>”</p>
     <p></p>
     <p></p>
-    <p>　――それ、世界征服しますって言ってるようなものじゃん……。</p>
-    <p>　掠れた声でそう言うハンナに、メルセデスは笑みを以て肯定を返した。</p>
+    <p>——这不是说要征服世界吗……。</p>
+    <p>梅赛德斯用微笑回应了用嘶哑的声音这样说的汉娜。</p>
+    <p class="divline"></p>
     <p>パパン“ブラボー……おお、ブラボー！”</p>
-    <p>ハンナ“もうやだこの親子！”</p>
+    <p>汉娜“真是的这对父女”</p>
+    <p>
+        <span class="comment translator">
+            ブラボー……おお、ブラボー！
+            JOJO梗 出自14卷51页
+            Bravo！ Oh～ Bravo～！
+            中文大意： 精彩啊 精彩
+        </span>
+    </p>
     <p></p>
-    <p>これにはベルンハルトもニッコリ。</p>
+    <p>伯恩哈特对此也笑了。</p>
 </body>
 
 </html>
