--- a/OEBPS/Text/c135.xhtml
+++ b/OEBPS/Text/c135.xhtml
@@ -94,7 +94,7 @@
     <p>你期待着成为自己的伙伴吗？</p>
     <p>还是说，像伯恩哈特那样期待着梅赛德斯一样——。</p>
     <p></p>
-    <p>“<span class="character">…………结果……还是和伯恩哈德走的是同一条路，吗……</span>”</p>
+    <p>“<span class="character">…………结果……还是和伯恩哈特走的是同一条路，吗……</span>”</p>
     <p></p>
     <p>汉娜用沉寂的声音嘟囔着。</p>
     <p>什么时候在狩猎祭上梅赛德斯获胜的时候……看到站在她旁边的吉克林德，怀有着期待。</p>
@@ -120,7 +120,7 @@
     <p></p>
     <p>梅赛德斯到达宅邸后，宅邸内安静得出奇。</p>
     <p>没有佣人，也没有其他家人。</p>
-    <p>然而，只有伯恩哈德站在大厅里，仿佛一直在等待。</p>
+    <p>然而，只有伯恩哈特站在大厅里，仿佛一直在等待。</p>
     <p></p>
     <p>“<span class="character">“今天是个好日子。”</span>”</p>
     <p></p>
