--- a/OEBPS/Text/c136.xhtml
+++ b/OEBPS/Text/c136.xhtml
@@ -82,7 +82,7 @@
     <p></p>
     <p>梅赛德斯瞄准伯恩哈特的脖子挥下斧枪。</p>
     <p>与此同时，梅赛德斯确实听到了。伯恩哈特的心脏跳动。</p>
-    <p>本能察觉到了危险，立刻中断了攻击，立刻向后倒去，伯恩哈德的枪尖在身前一颤。</p>
+    <p>本能察觉到了危险，立刻中断了攻击，立刻向后倒去，伯恩哈特的枪尖在身前一颤。</p>
     <p>额头出血，地板上画着红色斑点。</p>
     <p>虽然和预想的一样，但好像还是没有到这种程度就结束的那么简单。</p>
     <p>梅赛德斯用手指擦额头。</p>
