--- a/OEBPS/Text/c137.xhtml
+++ b/OEBPS/Text/c137.xhtml
@@ -148,7 +148,7 @@
     <p>——然后，在远处也能看到巨大的危险家伙们的战斗中，镇上的人们陷入了大混乱。</p>
     <p class="divline"></p>
     <p>格鲁内瓦尔特宅邸→附近的森林</p>
-    <p>・一开始的哥布林场景中，它说的是“可以在远处看到的城镇”，但反过来说，它是可以正常看到的距离。所以梅赛德斯和伯恩哈德在离镇子很近的地方打架。</p>
+    <p>・一开始的哥布林场景中，它说的是“可以在远处看到的城镇”，但反过来说，它是可以正常看到的距离。所以梅赛德斯和伯恩哈特在离镇子很近的地方打架。</p>
     <p>此外，我们的两位似乎对拥有的稀有牌感到自豪。和平！</p>
 </body>
 
