--- a/OEBPS/Text/c134.xhtml
+++ b/OEBPS/Text/c134.xhtml
@@ -137,6 +137,7 @@
             中文大意： 精彩啊 精彩
         </span>
     </p>
+    <p class="img" style="background-image: url('../Images/ee0f36196eb7f780559f7aa87d9057ae.jpg'); width: 200px; height: 260px; "></p>
     <p></p>
     <p>伯恩哈特对此也笑了。</p>
 </body>
