--- a/OEBPS/Text/c131.xhtml
+++ b/OEBPS/Text/c131.xhtml
@@ -11,185 +11,185 @@
 </head>
 
 <body>
-    <h1>131　道具に徹する者達</h1>
-    <p>“<span class="character">襲撃犯の隠れ家というからには、近くの洞窟やボロ家のようなものを想像していたのだが……随分、変わった隠れ家だな？</span>”</p>
+    <h1>131. 贯彻道具的人们</h1>
+    <p>“<span class="character">我想象附近有一个洞穴或一间破屋，因为它是袭击者的藏身之处，但是……这是一个奇怪的藏身之处，不是吗？</span>”</p>
     <p></p>
-    <p>　吸血鬼とエルフェの貴族を襲撃して殺害した賊の隠れ家が判明してより半日。</p>
-    <p>　メルセデスとレスリー、それからベンケイとクロはハンナに案内され、集落から大分離れた位置にある林の前に到着していた。</p>
-    <p>　ハンナが捕らえた賊の証言によると、ここが彼らの隠れ家らしいが、一般に想像されるような隠れ家とはだいぶかけ離れている。</p>
-    <p>　勝手な想像と言われればそれまでなのだが、メルセデスの中では賊というのはもっとターゲットの近くの、洞窟だとかに住み着くようなイメージがあったのだ。</p>
-    <p>　しかしこの林は集落からかなりの距離があり、しかも林というのがよく分からない。</p>
-    <p>　オマケにどういうわけか、ここに生えている木はまるで南国の――この世界の南国がどうなっているのかはメルセデスは知らないので、記憶にある地球の南国、という意味だが――植物のように葉が大きく広がっていて、それが重なっている様はまるで緑色の屋根のようだ。
+    <p>在袭击吸血鬼和埃尔菲贵族并杀害的贼的藏身处判明后半天。</p>
+    <p>梅赛德斯和莱斯利，还有本凯和小黑在汉娜的带领下，到达了离村落很远的树林前。</p>
+    <p>根据汉娜抓到的贼的证言，这里好像是他们的藏身之处，但与一般想象中的藏身之处相去甚远。</p>
+    <p>如果说是随意的想象的话就到此为止了，但是在梅赛德斯中，贼给人的印象是住在目标附近的洞窟里。</p>
+    <p>不过，这片森林离村子还挺远的，也不清楚是不是森林。</p>
+    <p>不知为什么，这里生长的树就像南国的——这个世界的南国是怎样的，梅赛德斯不知道，所以是记忆中的地球的南国的意思——像植物一样叶子很大，重叠在一起的样子就像绿色的屋顶一样。
     </p>
     <p></p>
-    <p>“<span class="character">持ち込んだ苗木を土属性の魔法で急成長させて作ったんだろうね。下からは葉っぱが邪魔で見えないけど、葉っぱの上に簡素な小屋を作ってるはずだよ</span>”</p>
-    <p>“<span class="character">……葉の上に？</span>”</p>
-    <p>“<span class="character">うん。この植物は『ユーカ』っていってね、葉っぱが凄く頑丈だから上に乗って暮らす事だって出来るんだよ</span>”</p>
-    <p>“<span class="character">何故わざわざそんな場所に</span>”</p>
-    <p>“<span class="character">そりゃあ、飛べるからね</span>”</p>
+    <p>“<span class="character">是用土属性的魔法使带进来的树苗快速成长而成的吧。虽然从下面看不到叶子，但是应该是在叶子上建造了简单的小屋。</span>”</p>
+    <p>“<span class="character">……在叶子上？</span>”</p>
+    <p>“<span class="character">是的。这种植物被称为“Yuka”，叶子很结实，甚至可以在上面生活。</span>”</p>
+    <p>“<span class="character">为什么特意去那样的地方</span>”</p>
+    <p>“<span class="character">那是因为他们会飞</span>”</p>
     <p></p>
-    <p>　今更な話だが、フォーゲラは空を飛べる。</p>
-    <p>　したがって、その機動力は吸血鬼やエルフェの比ではなく、徒歩ならば時間がかかる距離も短時間で行き来可能で、わざわざ見付かりやすい地面に拠点を構える必要もない。</p>
-    <p>　この林の上に隠れ家を作ってしまえば、下からは葉っぱが邪魔で見えないし、木の上から見る者などそうそういない。</p>
-    <p>　大抵はただの林と思って素通りしてしまうだろう。</p>
-    <p>　空という広大なフィールドを自在に行き来出来るフォーゲラにとって、わざわざその有利を捨てて地面に降りる理由などないのだ。</p>
-    <p>　その事を察し、メルセデスはなるほど、と頷いた。</p>
-    <p>　確かに言われてみればそうだ。鳥だって外敵から逃れるために木や屋根に巣を作る。地べたに巣を作ったりはしない。</p>
+    <p>作为进一步的说明，福格拉可以在天空中飞行。</p>
+    <p>因此，其机动力不是吸血鬼和精灵可比，徒步的话需要时间的距离也可以在短时间内来往，没有必要特意在容易找到的地面上建立据点。</p>
+    <p>如果在这片树林上建个隐蔽的地方，从下面看不到叶子，从树上看的人也不多。</p>
+    <p>大部分都是以为只是树林而走过的吧。</p>
+    <p>对于能在天空这片广阔的球场上自由往来的福格拉来说，没有理由特意舍弃有利而降落在地上。</p>
+    <p>梅赛德斯察觉到了这件事，不禁点头。</p>
+    <p>确实说起来是这样。鸟也为了逃避外敌在树和屋顶上筑巢。不会在地上筑巢。</p>
     <p></p>
-    <p>“<span class="character">ところで、襲撃犯が結局何をしたかったのかは聞き出せたのか？</span>”</p>
-    <p>“<span class="character">それなんだけどね、メルちゃん、襲撃犯のリーダー格だけは生捕りにして欲しいんだよね</span>”</p>
+    <p>“<span class="character">话说，袭击犯到底想做什么你问出来了吗？</span>”</p>
+    <p>“<span class="character">就是这样，梅尔，我希望你能活捉袭击犯的首领。</span>”</p>
     <p></p>
-    <p>　今回の襲撃犯は実力とは裏腹に、やっている事はまるで素人だ。</p>
-    <p>　あちこちで目撃されているし、貴族を殺した事で無駄に吸血鬼とエルフェの双方から怒りを買ってしまっている。</p>
-    <p>　これでは宣戦布告を行ったようなものだ。</p>
-    <p>　フォーゲラのダンジョンを取り戻したいのは分からないではないが、やり方というものがあるだろう。</p>
-    <p>　こんな事をしては最悪、ダンジョン抜きで吸血鬼、エルフェと戦争する事になってしまう。</p>
-    <p>　この襲撃によるフォーゲラの利がまるでないのだ。</p>
-    <p>　だからこそ、メルセデスとハンナは疑問に感じていた。</p>
-    <p>　彼らは、そんな事も分からない間抜けなのか、と。</p>
-    <p>　そして現在、襲撃犯容疑がかけられて絶賛渦中の人物であるはずのレスリーは、吸血鬼二人の話についていけずに、地面に木の枝で落書きをしていた。</p>
+    <p>这次的袭击犯和实力相反，做的事简直是外行。</p>
+    <p>到处都有目击，因为杀了贵族而徒劳地从吸血鬼和埃尔菲双方那里招来了愤怒。</p>
+    <p>这就像是宣战。</p>
+    <p>我不知道我是否想找回 Forgera 地牢，但总有一种做法吧。</p>
+    <p>这样做的话最糟糕的是，没有迷宫就和吸血鬼、埃尔菲打仗了。</p>
+    <p>这次袭击完全没有福格拉的利益。</p>
+    <p>正因为如此，梅赛德斯和汉娜才感到疑惑。</p>
+    <p>他们是连那样的事情都不知道的笨蛋吗。</p>
+    <p>而现在，本该被指责为袭击者，卷入漩涡中的莱斯利，却跟不上两个吸血鬼的故事，正在用树枝在地上乱涂乱画。</p>
     <p></p>
-    <p>“<span class="character">尋問して分かったのは、彼らは自我を捨ててるっていう事。今回の襲撃に関して、実行犯である彼らは何の思惑も持ってないの。ただ上からの命令を忠実に実行しただけ……捕らえたフォーゲラは言ってたよ、『自分はただの道具だ』って</span>”</p>
-    <p>“<span class="character">なるほど、よく訓練されている</span>”</p>
+    <p>“<span class="character">审问后明白的是，他们抛弃了自我。关于这次袭击，作为执行犯的他们没有任何想法。只是忠实地执行了上面的命令……抓住的福格拉说，‘自己只是道具’。</span>”</p>
+    <p>“<span class="character">原来如此，训练得很好</span>”</p>
     <p></p>
-    <p>　道具は自ら考えない。考えるのは使い手の役割だ。</p>
-    <p>　投げられたナイフが『こいつに刺さりたくない』と考えて勝手に引き返したら、それはただの欠陥品だ。</p>
-    <p>　手にした箸が『俺、納豆に触りたくない』と使われることを拒否したら、一体誰がそんなものを使いたがる。</p>
-    <p>　道具は考えない。ただ使われるだけだ。</p>
-    <p>　彼らも、そうなのだろう。厳しい訓練で自らを完全に道具とし、どんな命令にも疑問を抱かず遂行する。</p>
-    <p>　だから彼らは『何故』を考えない。</p>
-    <p>　仮に主から『俺の息子を殺せ』と言われれば、それを『何故』と問う事なく実行するだろう。</p>
+    <p>工具自己不考虑。思考是使用者的作用。</p>
+    <p>如果被扔出去的刀想着“不想刺这家伙”而擅自返回的话，那只是缺陷品。</p>
+    <p>如果手上的筷子因为“我不想碰纳豆”而拒绝使用的话，到底谁会想用那样的东西呢。</p>
+    <p>道具无需思考。只是被使用而已。</p>
+    <p>他们也是这样吧。在严格的训练中完全把自己作为道具，对任何命令都不抱疑问地执行。</p>
+    <p>所以他们不考虑“为什么”。</p>
+    <p>如果主说“杀了我的儿子”的话，就不会问“为什么”而实行了吧。</p>
     <p></p>
-    <p>“彼らは本当に何も知らないの。上からの命令をリーダーが受け取って、そのリーダーから彼らに指示が下される。だから相手に対して何の恨みもないし、自分が殺す相手を何故殺さなければならないのかも知らない。実行した後に何が起こるかも考えてない。命令を実行する事で、それが主の利になるか害になるかすら考えてない”
-    </p>
-    <p>“<span class="character">……確かに、それは道具だな。理想的ですらある</span>”</p>
+    <p>“<span class="character">他们真的什么都不知道。领导接到上级的命令，领导下达指示给他们。所以对对方没有任何怨恨，也不知道为什么要杀自己要杀的对象。我不知道实行后会发生什么。通过执行命令，这就是主的利我甚至没有考虑到底会变成什么样</span>”</p>
+    <p>“<span class="character">……确实，那是道具啊。甚至是理想的。</span>”</p>
     <p></p>
-    <p>　自分で一切考えず、ただ忠実に命令に従う。それは隠密の一つの到達点なのかもしれない。</p>
-    <p>　実際メルセデスも、ユリアにそう在る事を求めたのだから他人事ではない。</p>
-    <p>　余計な事を考えるな、ただ実行しろ。</p>
-    <p>　メルセデスがユリアに求めた事の、その延長線上に今回の襲撃犯がいる。</p>
+    <p>自己完全不考虑，只是忠实地服从命令。那也许是隐秘的一个到达点。</p>
+    <p>实际上梅赛德斯也要求尤里亚那样在，所以不是别人的事。</p>
+    <p>不要想多余的事情，只是实行吧。</p>
+    <p>梅赛德斯要求尤里亚的事，在那个延长线上有这次的袭击犯。</p>
     <p></p>
-    <p>“<span class="character">理想的、か……ふふっ</span>”</p>
-    <p>“<span class="character">……何だ？</span>”</p>
-    <p>“<span class="character">いや、きっとベルンハルトも同じ事を言うんだろうなって思ってさ</span>”</p>
+    <p>“<span class="character">理想的……呵呵</span>”</p>
+    <p>“<span class="character">……什么？</span>”</p>
+    <p>“<span class="character">不，我想伯恩哈特一定也会说同样的话吧。</span>”</p>
+    <p>“<span class="character">……</span>”</p>
+    <p></p>
+    <p>梅赛德斯露骨地露出厌恶的神情。</p>
+    <p>不管怎么说，能和那个父亲一样，真是太遗憾了。</p>
+    <p></p>
+    <p>“<span class="character">古斯塔夫之前也说过同样的话，道具不需要思考。</span></p>
+    <p><span class="character">那个怎么样呢。我不太认为是正确的</span>”</p>
+    <p></p>
+    <p>汉娜寂寞地说，梅赛德斯不敢回答任何问题。</p>
+    <p>只有这个是个人的想法。一定没有正确答案吧。</p>
+    <p>例如，假设安装了自动驾驶的车在行驶，在那之前有五个孩子跑出来了。</p>
+    <p>刹车来不及了。右边的对面车道上有别的车在行驶，如果避开那里的话会发生大惨剧。如果向左避开的话，孩子可以回避，但是会冲破栅栏掉进河里。</p>
+    <p>但是，如果避开它，只有司机会死。</p>
+    <p>这种时候，自动驾驶应该做出怎样的判断呢。</p>
+    <p>为了保护司机，自己做出“不避开”的判断，杀了五个孩子吗。在这种情况下，罪在司机还是车上。</p>
+    <p>为了五个孩子把司机丢到河里吗。但是，一旦发生紧急情况，到底是谁想乘坐杀死搭乘者的车呢。</p>
+    <p>正确答案梅赛德斯不知道。</p>
+    <p></p>
+    <p>“<span class="character">不是为了说那样的话才来到这里的吧。现在应该集中精力做眼前的事情。</span>”</p>
+    <p>“<span class="character">嗯，是啊。</span>”</p>
+    <p></p>
+    <p>没有哪个是正确的答案。</p>
+    <p>但是至少，那个讨论本身确实不应该在这个场合进行。</p>
+    <p>梅赛德斯把哈尔巴德扛在肩上，汉娜也从怀里拿出匕首。</p>
+    <p>莱斯利也看到谈话结束了，扛着枪，在紧急情况下，本凯马上站在她的右边。</p>
+    <p></p>
+    <p>“<span class="character">我们靠近的事对方也已经注意到了。你觉得应该怎么进攻？</span>”</p>
+    <p></p>
+    <p>听了汉娜的话，莱斯利说：“是吗！？”虽然很吃惊，但对梅赛德斯来说只是织好的事情。</p>
+    <p>因为在风景那么好的地方建了据点，所以如果有人靠近的话一定会注意到的。</p>
+    <p></p>
+    <p>“<span class="character">是啊……</span>”</p>
+    <p></p>
+    <p>恐怕那片树林里设置了击退入侵者用的陷阱吧。</p>
+    <p>那样的话，靠近那片树林本身就很不利。</p>
+    <p>但是那样的话，首先从据点开始破坏就好了。</p>
+    <p>梅赛德斯将指尖转向树林，无时间发动重力魔法——连林一起压碎。</p>
+    <p></p>
+    <p>“<span class="character">这样不是很好吗？</span>”</p>
+    <p>“<span class="character">哇，还是那么毫不留情……</span>”</p>
+    <p></p>
+    <p>看到像被看不见的天花板压碎一样压扁的树林，汉娜露出了干巴巴的笑容。</p>
+    <p>但是这是有效率的一步。</p>
+    <p>如果在第一手范围攻击中破坏了整个据点的话，对方准备的陷阱就可以无力化，因为封锁了动作，所以也可以直接抓住。也可以防止逃跑吧。</p>
+    <p>特别是对于能飞的对手，这个重力魔法是惊人的有效。</p>
+    <p>不过，对方也足够聪明，可以从贵族护卫中溜走，只杀死目标。</p>
+    <p>有几个人好像在梅赛德斯的魔法发动之前从树林里逃出来了，朝着这边笔直地飞过来了。</p>
+    <p></p>
+    <p>“<span class="character">杀漏了吗？</span>”</p>
+    <p>“<span class="character">那就轮到我出场了。梅尔就这样保持魔法。</span>”</p>
+    <p></p>
+    <p>飞来的四格拉有五个人。在那之前，汉娜没有破坏从容，要求梅赛德斯维持魔法。</p>
+    <p>我想到底要做什么，梅赛德斯想，这里看看汉娜的本领吧。</p>
+    <p>回想起来，我几乎不记得见过汉娜战斗的场面。</p>
+    <p>虽然只是在上课的时候组成的时候，但是那个时候汉娜在装做一只猫，所以离认真还很远吧。</p>
+    <p>福格拉形状奇怪的匕首……扔了日本忍者使用的苦无一样的东西，但在全部到达梅赛德斯之前就停止了。</p>
+    <p>是汉娜被魔法打出的水球吞没了。</p>
+    <p></p>
+    <p>“<span class="character">还给你</span>”</p>
+    <p></p>
+    <p>汉娜这样说着，指向指尖。</p>
+    <p>于是，苦无从水球中发射出来，刺进了没能避开的三名前锋们的脚和翅膀。</p>
+    <p>但对方也是训练有素的专业人士。这种程度的疼痛也不会胆怯。</p>
+    <p>不在意伤口，想要转移到下一次攻击……在这里，他们注意到了自己刺中的苦无和水球相连。</p>
+    <p>水就像绳子一样，连接着水球和苦无。</p>
+    <p>而当汉娜双手凝聚魔力的时候，火花霹雳霹雳地飞舞起来。</p>
+    <p>——雷属性。是风属性的派生属性魔法。</p>
+    <p>把缠在手上的电击直接注入水球，沿着水绳向四格拉们通电。</p>
+    <p></p>
+    <p>“<span class="character">a……！</span>”</p>
+    <p></p>
+    <p>发出了连悲鸣都没有的短声音，福格拉们落到了地上。</p>
+    <p>剩下的是两个人。</p>
+    <p>看到现在的情景就警戒了吧。两个人不马上飞到这里，窥视着情况。</p>
+    <p>即使迂回跳入，也会被水球妨碍，远距离攻击也会反弹。</p>
+    <p>水和电……虽然很简单但是是强有力的组合。</p>
+    <p>梅赛德斯也在观察汉娜的战斗的同时坦率地认为这是很了不起的东西。</p>
+    <p>特别是雷属性魔法的使用方法值得参考。</p>
+    <p>梅赛德斯也可以使用风属性的魔法，但作为其派生魔法的雷属性还没有掌握。</p>
+    <p></p>
+    <p>“<span class="character">啊</span>”</p>
+    <p></p>
+    <p>莱斯利惊呼起来。</p>
+    <p>在剩下的两个前锋中，一个人竟然转身逃跑了。</p>
+    <p>另一方在明知会被打的基础上发动特攻，紧急接近梅赛德斯等人。</p>
+    <p>但是，这种鲁莽的突击不会成为威胁。</p>
+    <p>前面飞出的小黑以像风一样的速度咬断了福格拉的单翼，接着用剑砍掉了本凯剩下的翅膀，抓住福格拉的头打到了地上。</p>
+    <p></p>
+    <p>“<span class="character">本凯，莱斯利，射击！</span>”</p>
+    <p>“<span class="character">如您所愿！</span>”</p>
+    <p>“<span class="character">啊……喂，这样啊，突然……</span>”</p>
+    <p></p>
+    <p>梅赛德斯发出指示，马上击落逃跑的四格拉。</p>
+    <p>梅赛德斯自己现在，用重力魔法每个据点在拘留中不能转移到攻击中。</p>
+    <p>本凯迅速地射出箭……但是，毕竟距离太远了。箭被轻松地回避了，接着莱斯利连射枪，这是因为毛手毛脚的缘故，距离更空了。</p>
+    <p>不过，似乎是一击命中，奔跑的福尔杰拉的一条腿飞了出去……但是，还不至于掉下来。</p>
+    <p></p>
+    <p>“<span class="character">呃……那是什么枪？它会到达这个距离吗？说起来你刚才是连射了？</span>”</p>
+    <p></p>
+    <p>莱斯利的枪的异常性能让汉娜大吃一惊，但说明在后面。</p>
+    <p>莱斯利继续扣动扳机……但什么也不接。</p>
+    <p></p>
+    <p>“<span class="character">……啊，对不起。子弹没了</span>”</p>
     <p>“<span class="character">…………</span>”</p>
     <p></p>
-    <p>　メルセデスは露骨に嫌そうな顔をした。</p>
-    <p>　いくら何でも、あの父と同じにされるのは心外である。</p>
-    <p></p>
-    <p>“グスタフも同じ事を前に言ってたよ、道具は考えないってさ。</p>
-    <p>　それって、どうなのかな。私は正しいってあんまり思えないんだよね”</p>
-    <p></p>
-    <p>　ハンナは寂しそうに言い、メルセデスはあえて何も答えない。</p>
-    <p>　こればかりは、個人の考えだ。きっと正解などないのだろう。</p>
-    <p>　例えば自動運転を実装した車が走っていたとして、その前に子供が五人飛び出してきたとしよう。</p>
-    <p>　ブレーキは間に合わない。右の対向車線には別の車が走っていて、そちらに避ければ大惨事。左に避ければ子供は回避出来るが、柵を突き破って川に転落してしまう。</p>
-    <p>　だが、そちらに避ければ死ぬのは運転手一人で済む。</p>
-    <p>　こういう時、自動運転はどういう判断を下すべきなのか。</p>
-    <p>　運転手を守るために、自ら『避けない』という判断をして子供五人を殺すのか。その場合罪は運転手と車のどちらにあるのか。</p>
-    <p>　子供五人の為に運転手を川に落とすのか。だがいざとなれば搭乗者を殺そうとする車など一体誰が乗りたがるというのか。</p>
-    <p>　正解はメルセデスには分からない。</p>
-    <p></p>
-    <p>“<span class="character">そんな事を話す為にここまで来たわけじゃないだろう。今は目の前の事に集中すべきだ</span>”</p>
-    <p>“<span class="character">ん、そうだね</span>”</p>
-    <p></p>
-    <p>　どちらが正しいのかの答えは出ない。</p>
-    <p>　だが少なくとも、その議論自体がこの場ですべきものでない事は確かだ。</p>
-    <p>　メルセデスはハルバードを肩に担ぎ、ハンナも懐から短刀を出した。</p>
-    <p>　レスリーも話が終わったと見て銃を担ぎ、いざという時にすぐ庇えるように彼女の右にベンケイが陣取る。</p>
-    <p></p>
-    <p>“<span class="character">私達が近付いた事は向こうも既に気付いている。どう攻めるべきだと思う？</span>”</p>
-    <p></p>
-    <p>　ハンナの言葉にレスリーは“そうなの！？”と驚いているが、メルセデスにとっては織り込み済みの事でしかない。</p>
-    <p>　あれだけ見晴らしのいい場所に拠点を構えているのだから、誰かが近付いて来たら気付くに決まっている。</p>
-    <p></p>
-    <p>“<span class="character">そうだな……</span>”</p>
-    <p></p>
-    <p>　恐らくあの林には侵入者撃退用の罠くらいは仕掛けてあるだろう。</p>
-    <p>　そうなるとあの林に近づく事自体が不利だ。</p>
-    <p>　だがそれならば、まずは拠点から潰してしまえばいい。</p>
-    <p>　メルセデスは指先を林に向けると、ノータイムで重力魔法を発動――林ごと押し潰した。</p>
-    <p></p>
-    <p>“<span class="character">これでいいんじゃないか？</span>”</p>
-    <p>“<span class="character">うわあ、相変わらず容赦ない……</span>”</p>
-    <p></p>
-    <p>　まるで見えない天井に潰されるかのようにひしゃげていく林を見て、ハンナは乾いた笑みを浮かべた。</p>
-    <p>　しかし効率的な一手ではある。</p>
-    <p>　初手範囲攻撃で拠点ごと潰してしまえば、相手の用意していた罠は無力化できるし、動きを封じたのでそのまま捕らえる事も出来る。逃走の防止にもなるだろう。</p>
-    <p>　特に飛べる相手に対して、この重力魔法は呆れるほどに有効だ。</p>
-    <p>　しかし相手も、貴族の護衛をすり抜けて対象のみを仕留めるほどの凄腕だ。</p>
-    <p>　何人かはメルセデスの魔法が発動する前に林から逃れていたらしく、こちらに向かって真っすぐに飛んできた。</p>
-    <p></p>
-    <p>“<span class="character">討ち漏らしたか</span>”</p>
-    <p>“<span class="character">なら、私の出番だね。メルちゃんはそのまま魔法を維持してて</span>”</p>
-    <p></p>
-    <p>　飛んでくるフォーゲラは五人。それを前にハンナは余裕を崩さず、メルセデスに魔法を維持する事を求めた。</p>
-    <p>　一体何をする気なのかと思ったが、ここはハンナのお手並み拝見といこうか、とメルセデスは考える。</p>
-    <p>　思えばハンナが戦う場面を、見た覚えがほとんどない。</p>
-    <p>　精々、授業の時に組んだ時くらいだが、あの時はハンナも猫を被っていたので本気には程遠かっただろう。</p>
-    <p>　フォーゲラが変わった形状の短刀……日本の忍者が使う苦無のような物を投げるが、その全てがメルセデス達に届く前に停止した。</p>
-    <p>　ハンナが魔法で出した水の球に飲み込まれたのだ。</p>
-    <p></p>
-    <p>“<span class="character">返すよ</span>”</p>
-    <p></p>
-    <p>　ハンナがそう言い、指先を向ける。</p>
-    <p>　すると苦無が水の球から発射され、避け損ねた三人のフォーゲラ達の足や翼に突き刺さった。</p>
-    <p>　しかし向こうも訓練されたプロだ。この程度の痛みでは怯みもしない。</p>
-    <p>　傷を気にせず、次の攻撃へ移ろうとしたが……ここで、自らに刺さった苦無と、水の球が繋がっている事に彼等は気が付いた。</p>
-    <p>　まるで水が紐のようになり、水の球と苦無を繋げているのだ。</p>
-    <p>　そしてハンナは両手に魔力を集めると、バチバチとスパークが迸った。</p>
-    <p>　――雷属性。風属性からの派生属性魔法だ。</p>
-    <p>　手に纏った電撃をそのまま水球へと注ぎ込めば、水の紐を伝ってフォーゲラ達へと通電した。</p>
-    <p></p>
-    <p>“<span class="character">ぎっ……！</span>”</p>
-    <p></p>
-    <p>　悲鳴にもなっていない短い声をあげ、フォーゲラ達は地面へ落下した。</p>
-    <p>　残るは二人。</p>
-    <p>　今の光景を見て警戒したのだろう。二人はこちらにすぐに飛ばず、様子を窺っている。</p>
-    <p>　迂闊に飛び込んでも水球に邪魔をされるだろうし、遠距離攻撃も跳ね返される。</p>
-    <p>　水と電気……シンプルながら強力な組み合わせだ。</p>
-    <p>　メルセデスも、ハンナの戦いを観察しながら素直に大したものだと考えていた。</p>
-    <p>　特に雷属性魔法の使い方は参考になる。</p>
-    <p>　メルセデスも風属性の魔法を使えるが、その派生魔法である雷属性は未だ習得していない。</p>
-    <p></p>
-    <p>“<span class="character">あっ</span>”</p>
-    <p></p>
-    <p>　驚いたようにレスリーが声をあげた。</p>
-    <p>　残る二人のフォーゲラのうち、一人が何と背を向けて逃走を図ったのだ。</p>
-    <p>　もう片方はやられる事を承知の上としか思えない特攻をかけ、メルセデス達に急接近する。</p>
-    <p>　だがそんな無謀な突撃など脅威にはならない。</p>
-    <p>　前に飛び出したクロが風の如き速度でフォーゲラの片翼を噛み千切り、続いてベンケイが残る翼を剣で切り落とし、フォーゲラの頭を掴んで地面に叩きつけた。</p>
-    <p></p>
-    <p>“<span class="character">ベンケイ、レスリー、撃て！</span>”</p>
-    <p>“<span class="character">御意！</span>”</p>
-    <p>“<span class="character">えっ……ちょ、そんな、いきなり……</span>”</p>
-    <p></p>
-    <p>　逃げるフォーゲラを、すぐ撃ち落とすようにメルセデスが指示を出した。</p>
-    <p>　メルセデス自身は現在、重力魔法で拠点ごと他のフォーゲラを拘束中で攻撃に移行する事が出来ない。</p>
-    <p>　ベンケイは素早く矢を放つ……が、流石に距離が空きすぎた。矢は軽々と回避され、続けてレスリーが銃を連射するも、こちらはモタモタしていたせいで更に距離が空いてしまっている。</p>
-    <p>　それでも命中したらしく、逃走中のフォーゲラの片足が千切れ飛んだ……が、落とすには至らない。</p>
-    <p></p>
-    <p>“<span class="character">えっ……何、その銃？　この距離で届くの？　というか今連続で撃ってなかった？</span>”</p>
-    <p></p>
-    <p>　レスリーの持つ銃の異常な性能にハンナが驚くが、説明は後だ。</p>
-    <p>　レスリーは続けて引き金を引く……が、何も出ない。</p>
-    <p></p>
-    <p>“<span class="character">……あ、ごめん。弾切れ</span>”</p>
-    <p>“<span class="character">…………</span>”</p>
-    <p></p>
-    <p>　あと一歩だったのだが、残念ながらここで弾切れだ。</p>
-    <p>　本来ならば弾には余裕があったはずなのだが、グラシアンの馬鹿のせいでレスリーの銃はあらかじめ込めておいた分の弾丸しか残っていない。</p>
-    <p>　それを今、使い切ってしまったのだ。</p>
-    <p>　本当に、死んでからもレスリーの足を引っ張り続ける男である。</p>
+    <p>虽然只剩下一步了，但是很遗憾在这里弹断了。</p>
+    <p>本来子弹应该很充裕，但是因为格拉西恩的笨蛋，莱斯利的枪只剩下事先放进去的子弹了。</p>
+    <p>那个现在用完了。</p>
+    <p>真的，是死后也继续拉莱斯利后腿的男人。</p>
+    <p class="divline"></p>
     <p>～ＴＲＰＧあるある～</p>
-    <p>ＧＭ“敵の拠点用意したよ！　罠も沢山配置したよ！　楽しんでね！”</p>
-    <p>プレイヤー１“じゃあ、遠くから火を放とうか”</p>
-    <p>プレイヤー２“魔法で崩落させるのはどう？”</p>
-    <p>プレイヤー３“毒ガス流し込もうぜ”</p>
-    <p>プレイヤー４“補給を断って兵糧攻めはどうよ”</p>
-    <p>ＧＭ“あの……拠点に入らない方向で相談するのやめて……”</p>
+    <p>GM“敌人的据点准备好了！陷阱也布置了很多哦！好好享受吧！”</p>
+    <p>玩家1“那么，从远处放火吧”</p>
+    <p>玩家2“用魔法使之崩落怎么样？”</p>
+    <p>玩家3“毒气流入吧”</p>
+    <p>玩家4“切断补给，进攻军粮怎么样？”</p>
+    <p>GM“那个……不要在不进入据点的方向商量……”</p>
     <p></p>
-    <p>盗賊の拠点には大体入ってもらえない。よくある事である。</p>
+    <p>盗贼的据点基本上不能进入。这是常有的事。</p>
 </body>
 
 </html>
